--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "adm-zip": "^0.5.16",
+    "axios": "^1.7.7",
+    "csv-parser": "^3.0.0",
+    "firebase-admin": "^12.4.0",
+    "firebase-functions": "^5.0.0",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.5",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
